# tech-note

./: .gitignore  APP_DEVELOPMENT.md  PLUGIN_DEVELOPMENT.md  README.md  approve_app.py  boot_64.py  install.bat  netlify.toml  requirements.txt  test_bridge.py  test_pipe.py  test_sapi.py
apps/: address_list.py  ambient_sound.py  app_store.py  app_usage_stats.py  auto_backup.py  blackjack.py  book_reader.py  bulk_file_ops.py  calendar_app.py  chat_app.py  chatgpt_client.py  connect_four.py  dice_roller.py  disk_cleanup.py  email_app.py  expense_tracker.py  fm_radio.py  game_center.py  habit_tracker.py  hangman.py  internet_app.py  lock_screen.py  media_player.py  memory_match.py  minesweeper.py  network_diag.py  notes_app.py  options_menu.py  password_manager.py  planner.py  plugin_manager_app.py  pomodoro_timer.py  power_menu.py  puzzle_game.py  rss_reader.py  settings_app.py  sleep_timer.py  solitaire.py  stopwatch.py  tech_calc.py  (+7 more)
braille/: discover.py  humanware_serial.py  manager.py  monarch_terminal.py  translator.py
core/: app_base.py  assistant.py  audio_ducking.py  audio_player.py  auto_save.py  background_audio.py  chat_client.py  clipboard_history.py  cloud_sync.py  command_registry.py  config.py  crypto_util.py  error_handler.py  file_dialog.py  menu.py  notification_center.py  plugin_base.py  plugin_manager.py  pronunciation_dict.py  recovery.py  safe_mode.py  save_dialog.py  setup_core.py  (+4 more)
dectalk-python/: README.md  pyproject.toml  setup.py
dectalk-python/dectalk/: __init__.py
dectalk-python/dectalk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+86 files in other folders)
